# huffman

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
include/: huffman.h
src/: lib.cpp
tests/: huffman_test.cpp
